[gd_scene load_steps=8 format=2]

[ext_resource path="res://client/menu/lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://client/ui/custom_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://client/menu/menu_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://client/fonts/DelaGothicOne-24.tres" type="DynamicFont" id=4]
[ext_resource path="res://client/ui/title_label.tscn" type="PackedScene" id=5]
[ext_resource path="res://client/fonts/DelaGothicOne-48.tres" type="DynamicFont" id=7]
[ext_resource path="res://client/theme/flappy.theme" type="Theme" id=8]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 1 )

[node name="ConnectionTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_right = 1900.0
margin_bottom = 111.0
text = "Multiplayer"

[node name="Menu" type="Control" parent="VBoxContainer"]
margin_top = 115.0
margin_right = 1900.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer/Menu/CenterContainer"]
margin_left = 594.0
margin_top = 137.0
margin_right = 1305.0
margin_bottom = 807.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer"]
margin_right = 711.0
margin_bottom = 70.0
size_flags_horizontal = 2
size_flags_vertical = 5
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer/NameContainer"]
margin_right = 181.0
margin_bottom = 70.0
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "Name:"

[node name="NameInput" type="LineEdit" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer/NameContainer"]
margin_left = 211.0
margin_right = 711.0
margin_bottom = 70.0
rect_min_size = Vector2( 500, 70 )
size_flags_horizontal = 8
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
align = 1
max_length = 24
placeholder_text = "Enter name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerBrowserButton" type="Button" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer"]
margin_top = 120.0
margin_right = 711.0
margin_bottom = 193.0
size_flags_horizontal = 3
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "Server Browser"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer"]
margin_top = 243.0
margin_right = 711.0
margin_bottom = 247.0

[node name="CreateButton" type="Button" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer"]
margin_top = 297.0
margin_right = 711.0
margin_bottom = 370.0
size_flags_horizontal = 3
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostOptions" type="HBoxContainer" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer"]
margin_top = 420.0
margin_right = 711.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer/HostOptions"]
margin_right = 225.0
margin_bottom = 73.0
size_flags_horizontal = 3
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerNameInput" type="LineEdit" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer/HostOptions"]
margin_left = 255.0
margin_right = 455.0
margin_bottom = 73.0
rect_min_size = Vector2( 200, 0 )
align = 1
placeholder_text = "Server name"

[node name="UpnpToggle" type="CheckButton" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer/HostOptions"]
margin_left = 532.0
margin_right = 663.0
margin_bottom = 73.0
hint_tooltip = "Use UPnP to try to automatically perform port forwarding."
size_flags_horizontal = 6
pressed = true
text = "UPnP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer"]
margin_top = 543.0
margin_right = 711.0
margin_bottom = 547.0

[node name="IpContainer" type="HBoxContainer" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer"]
margin_top = 597.0
margin_right = 711.0
margin_bottom = 670.0
size_flags_horizontal = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer/IpContainer"]
margin_right = 348.0
margin_bottom = 73.0
size_flags_horizontal = 3
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpInput" type="LineEdit" parent="VBoxContainer/Menu/CenterContainer/ButtonContainer/IpContainer"]
margin_left = 363.0
margin_top = 1.0
margin_right = 711.0
margin_bottom = 71.0
rect_min_size = Vector2( 300, 70 )
hint_tooltip = "The IP address to connect to."
size_flags_horizontal = 7
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "127.0.0.1"
align = 1
placeholder_text = "Enter IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorMessage" parent="VBoxContainer/Menu" instance=ExtResource( 2 )]
visible = false
anchor_top = 1.0
margin_top = -70.0
custom_colors/font_color = Color( 0.839216, 0.141176, 0.0666667, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Error text!"
align = 1
valign = 1

[node name="InfoMessage" parent="VBoxContainer/Menu" instance=ExtResource( 2 )]
visible = false
anchor_top = 1.0
margin_top = -70.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Info text!"
align = 1
valign = 1

[node name="BackButton" parent="VBoxContainer/Menu" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -75.0
margin_right = 177.0
margin_bottom = 5.0
label = "Back"
alignment = 1

[connection signal="timeout" from="ConnectionTimer" to="." method="_on_ConnectionTimer_timeout"]
[connection signal="pressed" from="VBoxContainer/Menu/CenterContainer/ButtonContainer/ServerBrowserButton" to="." method="_on_ServerBrowserButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/CenterContainer/ButtonContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/CenterContainer/ButtonContainer/HostOptions/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="toggled" from="VBoxContainer/Menu/CenterContainer/ButtonContainer/HostOptions/UpnpToggle" to="." method="_on_UpnpToggle_toggled"]
[connection signal="pressed" from="VBoxContainer/Menu/CenterContainer/ButtonContainer/IpContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/BackButton" to="." method="_on_BackButton_pressed"]
